--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap");
 @font-face {
   font-family: circular;
-  src: url(circularstd.ttf);
+  src: url(./fonts/circularstd.ttf);
 }
 * {
   box-sizing: border-box;
