--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@
   --font-semi-bold: 600;
   /* Colors */
   --first-color: #62ac43;
+  --first-color-light: rgb(98 172 67 / 69%);
   --second-color: #313131;
   --second-color-second: #828282;
 }
@@ -70,13 +71,17 @@ a:active {
 }
 body {
   font-family: var(--mainfont);
-  max-width: 1350px;
+  /* max-width: 1350px; */
   height: 3000px;
 }
 /* =======================    Reusable CSS classes     ======================== */
 .container {
-  max-width: 780px;
-  margin: 0 2rem;
+  padding: 0px 3rem;
+  max-width: 1250px;
+  margin: 0 auto;
+}
+.section {
+  padding: 2rem 0 4rem;
 }
 .header {
   width: 100%;
@@ -87,13 +92,72 @@ body {
   background-color: var(--body-color);
 }
 
+/* ----------------------    buttons    ----------------------- */
+
+.btn {
+  display: block;
+  width: 163px;
+  text-align: center;
+  line-height: 45px;
+  text-transform: uppercase;
+  background-color: var(--first-color);
+  color: #fff;
+  cursor: pointer;
+  border-radius: 5px;
+  box-shadow: 0px 100px 80px rgba(56, 56, 56, 0.1),
+    0px 64.8148px 46.8519px rgba(56, 56, 56, 0.0759259),
+    0px 38.5185px 25.4815px rgba(56, 56, 56, 0.0607407),
+    0px 20px 13px rgba(56, 56, 56, 0.05),
+    0px 8.14815px 6.51852px rgba(56, 56, 56, 0.0392593),
+    0px 1.85185px 3.14815px rgba(56, 56, 56, 0.0240741);
+  transition: 0.4s;
+}
+.btn:hover {
+  color: #fff;
+  transform: scale(0.99);
+}
+/* ----------------------    sign img    ----------------------- */
+.title_sign-img {
+  position: absolute;
+  top: -130px;
+  left: 50%;
+  width: 270px;
+  transform: translateX(-50%);
+}
+
+.title {
+  position: relative;
+  font-weight: 400;
+  font-size: 2.5rem;
+  color: var(--second-color);
+  margin: 5rem;
+  text-align: center;
+  text-transform: capitalize;
+}
+.title::after {
+  content: "";
+  height: 4px;
+  position: absolute;
+  top: 50px;
+}
+.title span {
+  color: var(--first-color);
+}
+/* --------------------  Cards  ----------------------*/
+
+.card_stars {
+  display: flex;
+}
+.star {
+  color: #fdcc0d;
+}
 /* ===================    Header   ==================== */
 .nav {
   height: 4rem;
-  max-width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: inherit;
 }
 .nav_logo {
   font-weight: var(--font-semi-bold);
@@ -131,15 +195,13 @@ body {
   width: 50%;
   max-width: 15.75rem;
 }
-.sign_buttons span {
-  font-size: 17px;
-  line-height: 22px;
+.sign_buttons .sign {
+  font-size: 1.2rem;
   color: var(--second-color);
 }
 
 .signup-box {
-  width: 12.1vw;
-  max-width: 165px;
+  width: 10.3rem;
   height: 58px;
   text-align: center;
   line-height: 58px;
@@ -153,67 +215,99 @@ body {
   border-radius: 10px;
   cursor: pointer;
 }
-.nav .sign_buttons .signup-box:hover {
+.signup-box:hover {
   transform: scale(0.98);
 }
-.nav .signup-box span {
-  font-size: 18px;
-  line-height: 23px;
+.sign_buttons .signup {
   color: var(--first-color);
 }
 .nav_btns {
   display: none;
 }
 
+/* ==========================        Main       ============================= */
+
 /* ===========================        HOME       =========================== */
-.sign-img {
+
+.main_sign-img {
   position: absolute;
+  width: 200px;
   top: 0;
   left: 0;
+  z-index: -1;
 }
-.header-elements {
-  position: relative;
-  width: 92.3vw;
-  max-width: 1260px;
-  height: 684px;
-  margin-top: 170px;
+.scroll {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  cursor: pointer;
 }
-.header-elements .hero-desc {
+.scroll-arrow-up {
+  position: fixed;
+  bottom: 30px;
+  left: -60px;
+  background-color: var(--first-color-light);
+  z-index: 2;
+  transition: 0.4s;
+}
+.scroll-arrow-up:hover {
+  background-color: var(--first-color);
+}
+.show-scroll {
+  left: 20px;
+}
+.scroll-arrow-down {
   position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 640px;
-  height: 659px;
-  margin-left: 101px;
+  bottom: -25px;
+  left: 10px;
+  background-color: #fff;
+  z-index: 1;
 }
-.header-elements .hero-desc p {
-  display: block;
+.arrow-up-icon {
+  color: #fff;
+  font-size: 1.2rem;
+}
+.arrow-down-icon {
+  color: var(--second-color);
+  font-size: 1rem;
+}
+.home {
+  position: relative;
+  display: flex;
+  padding: 8rem 2rem;
+}
+.hero-desc {
+  max-width: 50%;
+  padding-top: 2rem;
+}
+.hero-desc p {
   width: 462px;
-  font-weight: 500;
-  font-size: 100px;
+  font-size: 5rem;
   line-height: 100%;
   color: var(--second-color);
 }
-.header-elements .hero-desc .heading span {
+.hero-desc .heading span {
   text-transform: capitalize;
   color: var(--first-color);
 }
-.header-elements .hero-desc .desc {
-  font-weight: 450;
-  font-size: 16px;
+.hero-desc .desc {
+  font-size: 1rem;
   line-height: 20px;
   color: var(--second-color-second);
   width: 566px;
-  margin: 50px 0;
+  margin: 1.2rem 0;
 }
-.header-elements .hero-desc .buttons {
+.buttons {
   position: relative;
   display: flex;
   justify-content: space-between;
   width: 346px;
   height: 51px;
 }
-.header-elements .hero-desc .buttons div {
+.buttons div {
   width: 150px;
   height: 51px;
   box-shadow: 0px 65.3611px 52.2889px rgba(68, 68, 68, 0.1),
@@ -224,7 +318,7 @@ body {
     0px 1.21039px 2.05766px rgba(68, 68, 68, 0.0240741);
   text-align: center;
 }
-.header-elements .hero-desc .buttons span {
+.buttons span {
   font-weight: 500;
   font-size: 17px;
   line-height: 51px;
@@ -233,17 +327,17 @@ body {
   cursor: pointer;
   color: #fff;
 }
-.header-elements .hero-desc .buttons .explore {
+.buttons .explore {
   background-color: var(--first-color);
   border-radius: 5px 0 0 5px;
 }
 
-.header-elements .hero-desc .buttons .contact {
+.buttons .contact {
   background-color: var(--second-color);
   border-radius: 0 5px 5px 0;
 }
 
-.header-elements .hero-desc .buttons .explore::after {
+.buttons .explore::after {
   display: block;
   content: "";
   border-top: 51px solid var(--first-color);
@@ -253,7 +347,7 @@ body {
   left: 150px;
 }
 
-.header-elements .hero-desc .buttons .contact::before {
+.buttons .contact::before {
   display: block;
   content: "";
   border-top: 51px solid transparent;
@@ -261,11 +355,11 @@ body {
   position: absolute;
   right: 150px;
 }
-.header-elements .hero-desc .search-box {
+.search-box {
   position: relative;
-  margin-top: 70px;
-  width: 100%;
-  height: 78px;
+  display: flex;
+  margin-top: 1rem;
+  padding: 0.6rem;
   background-color: #fff;
   box-shadow: 0px 65.3611px 52.2889px rgba(68, 68, 68, 0.1),
     0px 42.3637px 30.6229px rgba(68, 68, 68, 0.0759259),
@@ -275,83 +369,29 @@ body {
     0px 1.21039px 2.05766px rgba(68, 68, 68, 0.0240741);
   border-radius: 5px;
 }
-.header-elements .hero-desc .search-box .search-input {
-  width: calc(100% - 60px);
-  height: 100%;
-  padding: 0px 30px;
-  border: none;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
+.search-box .search-input {
+  width: 70%;
+  padding-left: 1rem;
+  font-size: 0.8rem;
   text-transform: uppercase;
-  border-radius: 5px;
-}
-.header-elements .hero-desc .search-box .search-input:focus {
   border: none;
   outline: none;
-}
-.header-elements .hero-desc .search-box .search-button {
-  display: inline-block;
-  background-color: var(--first-color);
-  position: absolute;
-  height: 54px;
-  width: 150px;
-  margin: 12px;
-  top: 0;
-  right: 0;
-  text-align: center;
-  line-height: 54px;
-  text-transform: uppercase;
-  color: #fff;
-  cursor: pointer;
   border-radius: 5px;
-  box-shadow: 0px 100px 80px rgba(56, 56, 56, 0.1),
-    0px 64.8148px 46.8519px rgba(56, 56, 56, 0.0759259),
-    0px 38.5185px 25.4815px rgba(56, 56, 56, 0.0607407),
-    0px 20px 13px rgba(56, 56, 56, 0.05),
-    0px 8.14815px 6.51852px rgba(56, 56, 56, 0.0392593),
-    0px 1.85185px 3.14815px rgba(56, 56, 56, 0.0240741);
 }
-.header-elements .hero-desc .search-box .scroll-line {
+.scroll-line {
   position: absolute;
-  top: 10px;
-  left: -97px;
-}
-.header-elements .hero-desc .search-box .scroll-arrow {
-  position: absolute;
-  height: 62px;
-  width: 62px;
-  top: 50px;
-  left: 4px;
-  background-color: white;
-  text-align: center;
-  border-radius: 50%;
-  cursor: pointer;
-}
-.header-elements .hero-desc .search-box .scroll-arrow i {
-  position: absolute;
-  top: 19px;
-  left: 22px;
-  color: var(--second-color-second);
-  font-size: 27px;
-}
-.header-elements .hero-images {
-  position: absolute;
-  bottom: -46px;
-  right: -70px;
-  width: 65.9vw;
-  max-width: 900px;
-  height: 631px;
-  z-index: -1;
+  top: 6px;
+  left: -65px;
+  width: 171px;
 }
 
-.header-elements .hero-images .map {
-  z-index: -1;
+.hero-images {
+  position: relative;
 }
-.header-elements .hero-images .card {
+
+.hero-images .card {
   position: absolute;
-  width: 165px;
-  height: 200px;
+  width: 124px;
   background: #ffffff;
   box-shadow: 0px 65.3611px 52.2889px rgba(68, 68, 68, 0.1),
     0px 42.3637px 30.6229px rgba(68, 68, 68, 0.0759259),
@@ -362,68 +402,62 @@ body {
   border-radius: 5px;
   padding: 5px;
 }
-.header-elements .hero-images .card img {
-  width: 100%;
-}
-
-.header-elements .hero-images .card .heading {
+.hero-images .card .heading {
   display: flex;
   justify-content: space-between;
-  margin: 10px 0 11px;
+  margin: 3px 0 8px;
 }
-.header-elements .hero-images .card .heading h3 {
-  font-weight: 500;
-  font-size: 10px;
-  line-height: 100%;
+.card_title {
+  font-weight: 600;
+  font-size: 0.43rem;
   color: var(--second-color);
 }
-.header-elements .hero-images .card .heading .stars {
-  display: flex;
-  width: 34px;
-  height: 6px;
+.hero-images .star {
+  font-size: 0.4rem;
 }
-.header-elements .hero-images .card p {
-  font-weight: 450;
-  font-size: 8px;
-  line-height: 100%;
+.card_description {
+  font-size: 0.425rem;
   color: var(--second-color-second);
-  margin-bottom: 13px;
+  margin-bottom: 8px;
 }
-.header-elements .hero-images .card span {
+.card_read {
   display: block;
   color: var(--first-color);
-  font-weight: 450;
-  font-size: 8px;
+  font-size: 0.45rem;
 }
-.header-elements .hero-images .card span::after {
+.hero-images .card span::after {
   content: "";
   display: block;
-  height: 0.9px;
-  width: 37px;
+  height: 0.8px;
+  width: 33.5px;
   background-color: var(--first-color);
 }
-.header-elements .hero-images .one {
-  top: -92px;
-  left: 264px;
+.hero-images .one {
+  top: 10px;
+  left: -47px;
 }
-.header-elements .hero-images .two {
-  top: 0px;
-  right: 84px;
+.hero-images .two {
+  top: 80px;
+  left: 240px;
 }
-.header-elements .hero-images .three {
-  bottom: 93px;
-  right: 260px;
+.hero-images .three {
+  bottom: 22px;
+  left: 110px;
 }
-
-/* ==========================        Main       ============================= */
+.map_img {
+  position: absolute;
+  top: 205px;
+  right: 200px;
+  width: 670px;
+  z-index: -1;
+}
 
 /* ========================LOGOS=========================== */
-
+.logos {
+  background-color: #f7f7f7;
+  padding-bottom: 2rem;
+}
 .logos-container {
-  width: 100%;
-  height: 200px;
-  margin: 100px 0;
-  padding: 0 60px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -462,84 +496,112 @@ body {
 }
 
 /* ========================   GALLERIES  =========================== */
-.gallery-container {
-  position: relative;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-transform: capitalize;
-}
 
-.gallery-container .sign-img {
-  position: absolute;
-  top: -90px;
-  left: 50%;
-  height: 362px;
-  transform: translateX(-50%);
-}
-.gallery-container .heading {
-  position: relative;
-  font-weight: 500;
-  font-size: 50px;
-  color: var(--second-color);
-  margin: 5.6rem;
-}
-.gallery-container h2 span {
-  color: var(--first-color);
-}
-.gallery-container h2::after {
-  content: "";
-  width: 163px;
-  height: 4px;
-  position: absolute;
-  top: 60px;
-  right: 1px;
+.gallery_heading::after {
+  width: 130px;
+  right: 394px;
   background-color: var(--second-color);
 }
-.gallery-container .wrapper::before,
-.gallery-container .wrapper::after {
+.img_wrapper::before,
+.img_wrapper::after {
   content: "";
   position: absolute;
   width: 130px;
   height: 130px;
 }
-.gallery-container .wrapper::before {
-  top: -50px;
-  right: -50px;
+.img_wrapper::before {
+  top: -45px;
+  right: -45px;
   border-right: 2px solid var(--second-color-second);
   border-top: 2px solid var(--second-color-second);
 }
-.gallery-container .wrapper::after {
-  left: -50px;
-  bottom: -50px;
+.img_wrapper::after {
+  left: -45px;
+  bottom: -45px;
   border-left: 2px solid var(--second-color-second);
   border-bottom: 2px solid var(--second-color-second);
 }
-.gallery-container .wrapper {
+.img_wrapper {
   position: relative;
   display: grid;
-  gap: 1.4rem;
+  gap: 1rem;
   grid-template-areas:
     "img1 img2 img4"
     "img1 img3 img4"
     "img1 img3 img5";
+  margin: 0 auto 7rem;
 }
 
-.gallery-container img:nth-child(1) {
+.gallery_img:nth-child(1) {
   grid-area: img1;
 }
-.gallery-container img:nth-child(2) {
+.gallery_img:nth-child(2) {
   grid-area: img2;
 }
-.gallery-container img:nth-child(3) {
+.gallery_img:nth-child(3) {
   grid-area: img3;
 }
-.gallery-container img:nth-child(4) {
+.gallery_img:nth-child(4) {
   grid-area: img4;
 }
-
-.gallery-container img:nth-child(5) {
+.gallery_img:nth-child(5) {
   grid-area: img5;
+}
+.gallery_btn {
+  margin: 0 auto;
+}
+/* ========================   DESTINATIONS  =========================== */
+.destination_heading::after {
+  width: 224px;
+  right: 347px;
+  background-color: var(--first-color);
+}
+.destination_cards {
+  display: flex;
+  width: max-content;
+}
+.destination_cards .card {
+  width: 300px;
+  background: #ffffff;
+  padding: 0.8rem;
+  margin-right: 1.5rem;
+  border-radius: 5px;
+  border: 1px solid rgb(130 130 130 / 32%);
+}
+.destination_cards .card.active_card {
+  box-shadow: 0px 65.3611px 52.2889px rgba(68, 68, 68, 0.1),
+    0px 42.3637px 30.6229px rgba(68, 68, 68, 0.0759259),
+    0px 25.1761px 16.655px rgba(68, 68, 68, 0.0607407),
+    0px 13.0722px 8.49694px rgba(68, 68, 68, 0.05),
+    0px 5.32572px 4.26057px rgba(68, 68, 68, 0.0392593),
+    0px 1.21039px 2.05766px rgba(68, 68, 68, 0.0240741);
+  border: none;
+}
+.destination_cards .destination_img {
+  width: 100%;
+}
+.destination_cards .card .heading {
+  display: flex;
+  justify-content: space-between;
+  margin: 0.8rem 0 1rem;
+}
+.destination_cards .card_title {
+  font-weight: 600;
+  font-size: 1.1rem;
+  color: var(--second-color);
+}
+.destination_cards .star {
+  font-size: 0.88rem;
+}
+.destination_cards .card_description {
+  font-size: 0.88rem;
+  color: var(--second-color-second);
+  margin-bottom: 1rem;
+}
+.card_equipment .icon {
+  color: var(--first-color);
+  font-size: 0.9rem;
+  padding: 5px;
+  border: 1px solid var(--first-color);
+  border-radius: 3px;
 }
