--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,7 @@ body {
   font-family: var(--mainfont);
   /* max-width: 1350px; */
   height: 3000px;
+  overflow-x: hidden;
 }
 /* =======================    Reusable CSS classes     ======================== */
 .container {
@@ -126,21 +127,30 @@ body {
 }
 
 .title {
-  position: relative;
   font-weight: 400;
   font-size: 2.5rem;
   color: var(--second-color);
-  margin: 5rem;
+  margin: 5rem auto;
   text-align: center;
   text-transform: capitalize;
 }
-.title::after {
-  content: "";
-  height: 4px;
+.title .underlined {
+  display: inline-block;
+  position: relative;
+}
+.title .underlined::after {
   position: absolute;
+  display: block;
+  content: "";
+  height: 3.5px;
+  width: 100%;
+  right: 0;
   top: 50px;
 }
-.title span {
+.title .second {
+  margin: 0 1rem;
+}
+.title .colored {
   color: var(--first-color);
 }
 /* --------------------  Cards  ----------------------*/
@@ -411,6 +421,7 @@ body {
   font-weight: 600;
   font-size: 0.43rem;
   color: var(--second-color);
+  text-transform: capitalize;
 }
 .hero-images .star {
   font-size: 0.4rem;
@@ -496,7 +507,9 @@ body {
 }
 
 /* ========================   GALLERIES  =========================== */
-
+.gallery_heading .underlined::after {
+  background-color: var(--second-color);
+}
 .gallery_heading::after {
   width: 130px;
   right: 394px;
@@ -551,9 +564,7 @@ body {
   margin: 0 auto;
 }
 /* ========================   DESTINATIONS  =========================== */
-.destination_heading::after {
-  width: 224px;
-  right: 347px;
+.destination_heading .underlined::after {
   background-color: var(--first-color);
 }
 .destination_cards {
@@ -561,14 +572,17 @@ body {
   width: max-content;
 }
 .destination_cards .card {
-  width: 300px;
+  /* width: 370px !important; */
+  height: 450px;
   background: #ffffff;
   padding: 0.8rem;
-  margin-right: 1.5rem;
+  /* margin-right: 1.5rem; */
   border-radius: 5px;
   border: 1px solid rgb(130 130 130 / 32%);
+  cursor: default;
+  transition: box-shadow 0.2s ease-in-out;
 }
-.destination_cards .card.active_card {
+.destination_cards .card:hover {
   box-shadow: 0px 65.3611px 52.2889px rgba(68, 68, 68, 0.1),
     0px 42.3637px 30.6229px rgba(68, 68, 68, 0.0759259),
     0px 25.1761px 16.655px rgba(68, 68, 68, 0.0607407),
@@ -579,6 +593,9 @@ body {
 }
 .destination_cards .destination_img {
   width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 5px;
 }
 .destination_cards .card .heading {
   display: flex;
@@ -586,8 +603,12 @@ body {
   margin: 0.8rem 0 1rem;
 }
 .destination_cards .card_title {
+  display: inline-block;
   font-weight: 600;
   font-size: 1.1rem;
+  overflow: hidden;
+  white-space: nowrap;
+  margin-right: 4px;
   color: var(--second-color);
 }
 .destination_cards .star {
@@ -598,10 +619,68 @@ body {
   color: var(--second-color-second);
   margin-bottom: 1rem;
 }
+.card_equipment {
+  bottom: 20px;
+  position: absolute;
+}
 .card_equipment .icon {
   color: var(--first-color);
   font-size: 0.9rem;
   padding: 5px;
   border: 1px solid var(--first-color);
   border-radius: 3px;
+}
+
+.mySwiper {
+  z-index: 0;
+  overflow: visible;
+}
+.swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal {
+  width: initial;
+  bottom: -40px;
+  transform: translateY(+50%);
+}
+.swiper-pagination-bullets .swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets
+  .swiper-pagination-bullet {
+  border-radius: 2px;
+  width: 30px;
+  height: 4px;
+}
+.swiper-pagination-bullet-active {
+  background-color: var(--first-color);
+}
+
+.swiper-button-prev,
+.swiper-rtl .swiper-button-next {
+  top: unset;
+  left: unset;
+  right: 50px;
+  bottom: -40px;
+  transform: translateY(+50%);
+}
+.swiper-button-prev,
+.swiper-rtl .swiper-button-next {
+  top: unset;
+  left: unset;
+  right: 50px;
+  bottom: -40px;
+  transform: translateY(+50%);
+}
+.swiper-button-next,
+.swiper-rtl .swiper-button-prev {
+  top: unset;
+  left: unset;
+  right: 20px;
+  bottom: -40px;
+  transform: translateY(+50%);
+}
+.swiper-button-next:after,
+.swiper-rtl .swiper-button-prev:after,
+.swiper-button-prev:after,
+.swiper-rtl .swiper-button-next:after {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: var(--first-color);
 }
