--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,38 +8,22 @@
 }
 
 :root {
-  /* fonts */
-  --mainfont: circular;
-  --big-font-size: 2rem;
-  --h1-font-size: 1.5rem;
-  --h2-font-size: 1.25rem;
-  --h3-font-size: 1.125rem;
-  --normal-font-size: 0.938rem;
-  --small-font-size: 0.813rem;
-  --smaller-font-size: 0.75rem;
-
-  --font-medium: 500;
-  --font-semi-bold: 600;
   /* Colors */
   --first-color: #62ac43;
   --first-color-light: rgb(98 172 67 / 69%);
   --second-color: #313131;
   --second-color-second: #828282;
   --border-color: #dddddd;
+
+  --h1-font-size: 2.5rem;
+  --h2-font-size: 1.15rem;
+  --h3-font-size: 0.88rem;
+  --h4-font-size: 0.4rem;
+
+  --border-radius: 5px;
 }
 
 /* ===== Font size for large devices ===== */
-@media screen and (min-width: 968px) {
-  :root {
-    --big-font-size: 3rem;
-    --h1-font-size: 2.25rem;
-    --h2-font-size: 1.5rem;
-    --h3-font-size: 1.25rem;
-    --normal-font-size: 1rem;
-    --small-font-size: 0.875rem;
-    --smaller-font-size: 0.813rem;
-  }
-}
 
 /* =====  BASE ===== */
 * {
@@ -71,7 +55,7 @@ a:active {
   color: inherit;
 }
 body {
-  font-family: var(--mainfont);
+  font-family: circular;
   overflow-x: hidden;
 }
 /* =======================    Reusable CSS classes     ======================== */
@@ -96,6 +80,7 @@ body {
 
 .btn {
   display: block;
+  font-size: var(--h2-font-size);
   width: 163px;
   margin: 0 auto;
   text-align: center;
@@ -104,7 +89,7 @@ body {
   background-color: var(--first-color);
   color: #fff;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
   box-shadow: 0px 100px 80px rgba(56, 56, 56, 0.1),
     0px 64.8148px 46.8519px rgba(56, 56, 56, 0.0759259),
     0px 38.5185px 25.4815px rgba(56, 56, 56, 0.0607407),
@@ -129,7 +114,7 @@ body {
 .subtitle {
   position: relative;
   font-weight: 400;
-  font-size: 2.5rem;
+  font-size: var(--h1-font-size);
   color: var(--second-color);
   margin: 5rem auto;
   text-align: center;
@@ -178,7 +163,6 @@ body {
 }
 .card_title {
   font-weight: 600;
-  font-size: 0.43rem;
   color: var(--second-color);
   text-transform: capitalize;
 }
@@ -188,10 +172,10 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: inherit;
+  padding: 0 2rem;
 }
 .nav_logo {
-  font-weight: var(--font-semi-bold);
+  font-weight: 600;
   font-size: 2rem;
   width: 30%;
   color: var(--second-color);
@@ -232,7 +216,7 @@ body {
 }
 
 .signup-box {
-  width: 10.3rem;
+  width: 160px;
   height: 58px;
   text-align: center;
   line-height: 58px;
@@ -254,6 +238,13 @@ body {
 }
 .nav_btns {
   display: none;
+  font-size: 2rem;
+  transition: 0.4s ease-in-out;
+  color: var(--first-color);
+}
+
+.nav_toggle {
+  cursor: pointer;
 }
 
 /* ==========================        Main       ============================= */
@@ -271,6 +262,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: var(--h2-font-size);
   height: 50px;
   width: 50px;
   border-radius: 50%;
@@ -299,22 +291,21 @@ body {
 }
 .arrow-up-icon {
   color: #fff;
-  font-size: 1.2rem;
 }
 .arrow-down-icon {
   color: var(--second-color);
-  font-size: 1rem;
 }
-.home {
+.home_container {
   position: relative;
   display: flex;
-  padding: 8rem 2rem;
+  padding: 5rem 1rem;
+  min-height: 100vh;
 }
 .hero-desc {
   max-width: 50%;
   padding-top: 2rem;
 }
-.hero-desc p {
+.hero-desc .heading {
   width: 462px;
   font-size: 5rem;
   line-height: 100%;
@@ -325,8 +316,8 @@ body {
   color: var(--first-color);
 }
 .hero-desc .desc {
-  font-size: 1rem;
-  line-height: 20px;
+  font-size: var(--h2-font-size);
+  line-height: 1.5rem;
   color: var(--second-color-second);
   width: 566px;
   margin: 1.2rem 0;
@@ -350,8 +341,7 @@ body {
   text-align: center;
 }
 .buttons span {
-  font-weight: 500;
-  font-size: 17px;
+  font-size: var(--h2-font-size);
   line-height: 51px;
   text-transform: uppercase;
   display: block;
@@ -398,16 +388,16 @@ body {
     0px 13.0722px 8.49694px rgba(68, 68, 68, 0.05),
     0px 5.32572px 4.26057px rgba(68, 68, 68, 0.0392593),
     0px 1.21039px 2.05766px rgba(68, 68, 68, 0.0240741);
-  border-radius: 5px;
+  border-radius: var(--border-radius);
 }
 .search-box .search-input {
   width: 70%;
   padding-left: 1rem;
-  font-size: 0.8rem;
+  font-size: var(--h3-font-size);
   text-transform: uppercase;
   border: none;
   outline: none;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
 }
 .scroll-line {
   position: absolute;
@@ -423,6 +413,7 @@ body {
 .hero-images .card {
   position: absolute;
   width: 124px;
+  font-size: var(--h4-font-size);
   background: #ffffff;
   box-shadow: 0px 65.3611px 52.2889px rgba(68, 68, 68, 0.1),
     0px 42.3637px 30.6229px rgba(68, 68, 68, 0.0759259),
@@ -430,7 +421,7 @@ body {
     0px 13.0722px 8.49694px rgba(68, 68, 68, 0.05),
     0px 5.32572px 4.26057px rgba(68, 68, 68, 0.0392593),
     0px 1.21039px 2.05766px rgba(68, 68, 68, 0.0240741);
-  border-radius: 5px;
+  border-radius: var(--border-radius);
   padding: 5px;
 }
 .hero-images .card .heading {
@@ -438,28 +429,24 @@ body {
   justify-content: space-between;
   margin: 3px 0 8px;
 }
-.hero-images .card_title {
-  font-weight: 600;
-  font-size: 0.43rem;
-}
-.hero-images .star {
-  font-size: 0.4rem;
-}
+
 .hero-images .card_description {
-  font-size: 0.425rem;
   color: var(--second-color-second);
   margin-bottom: 8px;
 }
 .card_read {
   display: block;
   color: var(--first-color);
-  font-size: 0.45rem;
+}
+.hero-images .card span {
+  position: relative;
+  display: inline-block;
 }
 .hero-images .card span::after {
   content: "";
   display: block;
   height: 0.8px;
-  width: 33.5px;
+  width: 100%;
   background-color: var(--first-color);
 }
 .hero-images .one {
@@ -476,9 +463,9 @@ body {
 }
 .map_img {
   position: absolute;
-  top: 205px;
-  right: 200px;
-  width: 670px;
+  top: 130px;
+  right: 40px;
+  width: 880px;
   z-index: -1;
 }
 
@@ -486,6 +473,7 @@ body {
 .logos {
   background-color: #f7f7f7;
   padding-bottom: 2rem;
+  text-transform: capitalize;
 }
 .logos-container {
   display: flex;
@@ -497,7 +485,6 @@ body {
   font-family: "Comfortaa", cursive;
   font-size: 1.5em;
   letter-spacing: -1px;
-  text-transform: capitalize;
 }
 .logos-container span:nth-child(2) {
   font-family: "Smooch", cursive;
@@ -508,7 +495,6 @@ body {
   font-family: "Varela Round", sans-serif;
   font-weight: 800;
   font-size: 2em;
-  text-transform: capitalize;
 }
 
 .logos-container span:nth-child(4) {
@@ -516,13 +502,11 @@ body {
   font-weight: 800;
   font-size: 1.7em;
   letter-spacing: -3px;
-  text-transform: capitalize;
 }
 .logos-container span:nth-child(5) {
   font-family: "Comfortaa", cursive;
   font-size: 1.5em;
   letter-spacing: -1px;
-  text-transform: capitalize;
 }
 
 /* ========================   GALLERIES  =========================== */
@@ -586,7 +570,7 @@ body {
   height: 450px;
   background: #ffffff;
   padding: 0.8rem;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
   border: 1px solid rgb(130 130 130 / 32%);
   cursor: default;
   transition: box-shadow 0.2s ease-in-out;
@@ -604,7 +588,7 @@ body {
   width: 100%;
   height: 250px;
   object-fit: cover;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
 }
 .destinations .card .heading {
   display: flex;
@@ -614,17 +598,17 @@ body {
 .destinations .card_title {
   display: inline-block;
   font-weight: 600;
-  font-size: 1.1rem;
+  font-size: var(--h2-font-size);
   overflow: hidden;
   white-space: nowrap;
   margin-right: 4px;
   color: var(--second-color);
 }
 .destinations .star {
-  font-size: 0.88rem;
+  font-size: var(--h3-font-size);
 }
 .destinations .card_description {
-  font-size: 0.88rem;
+  font-size: var(--h3-font-size);
   color: var(--second-color-second);
   margin-bottom: 1rem;
 }
@@ -634,7 +618,7 @@ body {
 }
 .destinations .card_equipment .icon {
   color: var(--first-color);
-  font-size: 0.9rem;
+  font-size: var(--h3-font-size);
   padding: 5px;
   border: 1px solid var(--first-color);
   border-radius: 3px;
@@ -673,7 +657,7 @@ body {
 }
 .destinations .swiper-button-next:after,
 .destinations .swiper-button-prev:after {
-  font-size: 1.5rem;
+  font-size: var(--h2-font-size);
   font-weight: bold;
   color: var(--first-color);
 }
@@ -682,7 +666,7 @@ body {
 .why_us-cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  column-gap: 2rem;
+  gap: 2rem;
   margin-bottom: 7rem;
 }
 
@@ -692,14 +676,14 @@ body {
   padding: 1.8rem;
   border: 1px solid #dddddd;
   box-sizing: border-box;
-  border-radius: 10px;
+  border-radius: var(--border-radius);
 }
 .why_us-cards .card-img {
   width: fit-content;
   padding: 1.2rem;
   background: #ffffff;
   box-shadow: inset 0px 0px 10px rgb(0 0 0 / 10%);
-  border-radius: 5px;
+  border-radius: var(--border-radius);
 }
 .why_us-cards .card-icon {
   font-size: 2.5rem;
@@ -712,12 +696,13 @@ body {
   margin: 2.5rem 0;
 }
 .why_us-cards .card_title {
-  font-size: 1rem;
+  font-size: var(--h2-font-size);
   font-weight: 400;
 }
 .why_us-cards .card_description {
-  font-size: 0.8rem;
+  font-size: var(--h3-font-size);
   line-height: 1.1rem;
+  color: #828282;
 }
 
 /* ========================   OUR customers  =========================== */
@@ -745,7 +730,7 @@ body {
 }
 .customers .swiper-button-next:after,
 .customers .swiper-button-prev:after {
-  font-size: 1.5rem;
+  font-size: var(--h2-font-size);
   font-weight: bold;
   color: var(--first-color);
 }
@@ -755,17 +740,16 @@ body {
   margin: 1.5rem 0;
 }
 .customers .card_subtitle {
-  font-size: 1.2rem;
+  font-size: var(--h2-font-size);
   color: var(--second-color-second);
   text-transform: capitalize;
   margin-bottom: 1.5rem;
 }
 .customers .card_description {
-  font-size: 0.88rem;
+  font-size: var(--h3-font-size);
   color: var(--second-color-second);
   margin-bottom: 8px;
   line-height: 1.8rem;
-  width: 750px;
 }
 .customers .avatar {
   width: 140px;
@@ -815,6 +799,7 @@ body {
 .footer_links .brand {
   font-size: 2rem;
   font-weight: 700;
+  text-transform: initial;
 }
 .footer_links .category_title {
   margin-bottom: 0.8rem;
@@ -827,4 +812,225 @@ body {
 }
 .copyright {
   text-align: center;
+}
+
+/* ========================   Media Query  =========================== */
+
+@media screen and (max-width: 1024px) {
+  :root {
+    --h1-font-size: 2.3rem;
+    --h2-font-size: 1.02rem;
+    --h3-font-size: 0.8rem;
+    --h4-font-size: 0.3rem;
+  }
+  .container {
+    padding: 2rem 1rem;
+    max-width: 990px;
+  }
+  .header {
+    max-width: 990px;
+  }
+  .nav_menu {
+    width: 75%;
+  }
+  .nav_logo {
+    width: 25%;
+  }
+  .sign_buttons {
+    max-width: 13rem;
+  }
+  .nav_list {
+    width: 60%;
+  }
+  .signup-box {
+    width: 8rem;
+  }
+  .home_container {
+    padding: 5rem 2rem;
+  }
+  .hero-desc .heading {
+    width: 400px;
+    font-size: 4rem;
+  }
+  .hero-desc .desc {
+    width: 430px;
+  }
+  .search-box .search-input {
+    padding-left: 0.5rem;
+  }
+  .scroll-line {
+    top: 13px;
+    left: -53px;
+    width: 150px;
+  }
+  .hero-images .card {
+    width: 110px;
+  }
+  .map_img {
+    right: 0px;
+    width: 650px;
+  }
+
+  .logos {
+    padding: 0;
+  }
+  .img_wrapper {
+    gap: 0.4rem;
+    width: 80%;
+    margin: 0 auto 7rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  .title_sign-img {
+    top: -110px;
+    width: 240px;
+  }
+  .nav_menu {
+    top: 60px;
+    right: -400px;
+    position: absolute;
+    flex-direction: column;
+    width: 50%;
+    background-color: #fdfdfd;
+    height: 400px;
+    border-radius: 20px;
+    padding: 1.8rem;
+    box-shadow: 7px 7px 38px 2px var(--second-color-second);
+    transition: 0.4s;
+  }
+  .nav_menu.active {
+    right: 15px;
+  }
+  .nav_list {
+    height: 70%;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .nav_btns {
+    display: block;
+  }
+  .nav_link {
+    font-size: 1.3rem;
+    letter-spacing: 1px;
+  }
+  .sign_buttons {
+    max-width: initial;
+    width: 80%;
+  }
+
+  .sign_buttons .sign {
+    font-size: 1.5rem;
+  }
+  .nav_btns {
+    display: block;
+  }
+
+  .main_sign-img {
+    width: 100px;
+  }
+  .hero-desc {
+    max-width: 100%;
+  }
+  .hero-images .card {
+    display: none;
+  }
+  .hero-desc .heading {
+    width: 500px;
+    font-size: 3rem;
+  }
+  .hero-desc .desc {
+    width: 100%;
+    padding: 3rem 0;
+  }
+  .buttons {
+    padding-bottom: 5rem;
+  }
+  .map_img {
+    display: none;
+  }
+
+  .logos-container {
+    height: 400px;
+    flex-direction: column;
+  }
+  .img_wrapper::before,
+  .img_wrapper::after {
+    width: 100px;
+    height: 100px;
+  }
+
+  .why_us-cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .customer_card {
+    width: 450px;
+    padding: 2rem;
+  }
+
+  .customers .avatar {
+    width: 100px;
+  }
+  .customers .swiper-button-prev {
+    left: 44%;
+  }
+  .customers .swiper-button-next {
+    right: 45%;
+  }
+  .footer {
+    padding: 30px 0 0px;
+  }
+  .footer_newsletter h3 {
+    font-size: 3rem;
+  }
+  .footer_links .brand {
+    font-size: 1.5rem;
+    font-weight: 100;
+  }
+
+  .footer_links {
+    font-size: 0.8rem;
+  }
+  .copyright {
+    font-size: 0.98rem;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  :root {
+    --h1-font-size: 2rem;
+    --h2-font-size: 0.8rem;
+    --h3-font-size: 0.9rem;
+    --h4-font-size: 0.2rem;
+  }
+  .subtitle .underlined::after {
+    height: 2.5px;
+  }
+  .nav_menu {
+    width: 80%;
+    height: 330px;
+    padding: 0.8rem;
+  }
+  .nav_menu.active {
+    right: 47px;
+  }
+  .nav_link {
+    font-size: 1.1rem;
+  }
+  .sign_buttons .sign {
+    font-size: 1.2rem;
+  }
+
+  .why_us-cards {
+    grid-template-columns: repeat(1, 1fr);
+    padding: 0 2rem;
+  }
+  .destinations .swiper-pagination-bullets {
+    display: none;
+  }
+  .destinations .swiper-button-next:after,
+  .destinations .swiper-button-prev:after {
+    font-size: 1.2rem;
+  }
 }
