--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,7 @@ body {
   margin: 5rem auto;
   text-align: center;
   text-transform: capitalize;
+  line-height: 3rem;
 }
 .subtitle span {
   display: inline-block;
@@ -299,7 +300,6 @@ body {
   position: relative;
   display: flex;
   padding: 5rem 1rem;
-  min-height: 100vh;
 }
 .hero-desc {
   max-width: 50%;
@@ -561,7 +561,9 @@ body {
   grid-area: img5;
 }
 /* ========================   DESTINATIONS  =========================== */
-
+.destinations {
+  overflow-x: hidden;
+}
 .destination_cards {
   display: flex;
   width: max-content;
@@ -706,6 +708,9 @@ body {
 }
 
 /* ========================   OUR customers  =========================== */
+.customers_container {
+  overflow-x: hidden;
+}
 .customer_cards {
   text-align: center;
   margin-bottom: 7rem;
@@ -902,7 +907,7 @@ body {
     transition: 0.4s;
   }
   .nav_menu.active {
-    right: 15px;
+    right: 5%;
   }
   .nav_list {
     height: 70%;
@@ -1011,12 +1016,9 @@ body {
     height: 2.5px;
   }
   .nav_menu {
-    width: 80%;
+    width: 90%;
     height: 330px;
     padding: 0.8rem;
-  }
-  .nav_menu.active {
-    right: 47px;
   }
   .nav_link {
     font-size: 1.1rem;
@@ -1039,17 +1041,13 @@ body {
 }
 @media screen and (max-width: 480px) {
   .nav_logo {
-    font-size: 1.3;
-  }
-  .nav_menu.active {
-    right: 32px;
+    font-size: 1.5rem;
   }
   .home_container {
     padding: 5rem 1rem;
   }
   .hero-desc .heading {
     width: 280px;
-    /* font-size: 3rem; */
   }
   .hero-desc .desc {
     width: 100%;
@@ -1140,7 +1138,7 @@ body {
     padding: 0px 1rem;
   }
   .customer_card {
-    width: 300px;
+    width: 290px;
     padding: 1rem;
   }
 
